# SPP_Steuerung

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.github/workflows/: ci.yml
main/: CMakeLists.txt  ble_control.c  ble_control.h  comms.c  comms.h  leds.c  leds.h  main.c  motor.c  motor.h  motor_control.c  motor_control.h  test.txt
main/ble/: ble_control.c
main/comms/: comms.c  comms.h
main/components/ble/: ble_control.c
main/components/buttons/: buttons.c
main/components/motor/: motor.c  motor.h  motor_control.c
main/components/sensors/: adc_shared.c  adc_shared.h  sensors.c  sensors.h  sensors_control.c  sensors_control.h
main/components/shared/: shared_adc.c  shared_adc.h  shared_comms.c  shared_comms.h
main/led/: led_control.c  led_control.h  leds.c  leds.h
main/motor/: motor.c  motor.h  motor_control.c  motor_control.h
