idf_component_register(SRCS "components/shared/shared_comms.c" 
                            "components/shared/shared_adc"
                            "components/ble/ble_control.c" 
                            "components/motor/motor_control.c" 
                            "components/motor/motor.c"
                            "components/sensors/sensors.c"
                            "components/sensors/sensors_control.c"

                            "main.c" 
                    INCLUDE_DIRS "." 
                            "components/ble" 
                            "components/shared" 
                            "components/motor"
                            "components/sensors"
                    )
